Server-side kitchen sink update (#229)
* Refactoring. Added automatic game using hardcoded user and deck names.

* Extracted HallTournamentCallback class

* Moved startup game creation to doAfterStartup

* Moved isAdmin determination into processTables function

* Removed some redundant properties from GameServer

* Moved listener classes out of GameServer

* Removed game-specific CardGameMediator classes

* Moved code out of GameServer into CardGameMediator class

* Minor cleanup of CardGameMediator class

* Removed NIU HallChannelVisitor class

* Moved card info serializer into separate class

* Moved some decision logic out of CardGameMediator

* Removed some complex properties from modifier classes

* Cleanup

* Removed Player property from PhysicalCard class

* Cleaned up imports

* Removed Condition and PhysicalCard properties from Condition class

* Import cleanup

* Removed Player property from AwayTeam class

* Removed DefaultGame property from ActionProxy class

* Import cleanup

* Removed MissionLocation property from AwayTeam class

* Removed Player property from MissionLocation class

* Converted anonymous Requirement classes into non-anonymous classes

* Added DefaultGame parameter to Requirement.accepts method

* Significant removal of dependency on DefaultGame property of ActionContext class

* Removed DefaultGame property from ActionContext class

* Fixed some uncaught anonymous filter blueprint constructions

* Refactoring of CardGroup classes

* Refactoring of Evaluator and ValueSource classes

* Simplified ValueSourceDeserializer class

* Consolidated Requirement and Condition classes into same folder

* Removed Player property from ModifiersLogic class

* Removed PhysicalCard property from ModifiersLogic class

* Removed ModifierHook class

* Fixed uniqueness bug

* Added Evaluator test

* Cleanup

* Cleanup

* Cleanup

* Cleanup

* Removed anonymous CardFilter classes

* Disinherited PhysicalCard class from Filterable interface

* Implemented C